new upd hw5.2-gmail

--- a/index.html
+++ b/index.html
@@ -31,23 +31,24 @@
 
                     <div class="radio">
                         <form>
-                        <input type="radio" value="Chỉ có bạn" checked>Chỉ có bạn
+                        <input type="radio" name="quantity" value="Chỉ có bạn" checked>Chỉ có bạn
                         <br>
                         <br>
-                        <input type="radio" value="2 đến 9 người" checked>2 đến 9 người
+                        <input type="radio" name="quantity" value="2 đến 9 người" checked>2 đến 9 người
                         <br>
                         <br>
-                        <input type="radio" value="10 đến 99 người" checked>10 đến 99 người
+                        <input type="radio" name="quantity" value="10 đến 99 người" checked>10 đến 99 người
                         <br>
                         <br>
-                        <input type="radio" value="100 đến 299 người" checked>100 đến 299 người
+                        <input type="radio" name="quantity" value="100 đến 299 người" checked>100 đến 299 người
                         <br>
                         <br>
-                        <input type="radio" value="300+" checked>300+
+                        <input type="radio" name="quantity" value="300+" checked>300+
                         </form>
                     </div>
 
                     <div class="box-6">
+                        <div class="p4"><b class="b1">.</b> Khu vực*</div>
                         <select name="" id="select">
                             <option value=""><p class="p2">Việt Nam</p></option>
                             <option value="">dsaf</option>
